--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ body {
 .v1_172 {
   width: 100%;
   height: 956px;
-  background: url("../images/v1_172.png");
+  background: url("v1_172.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -40,7 +40,7 @@ body {
 .v217_6 {
   width: 100%;
   height: 956px;
-  background: url("../images/v217_6.png");
+  background: url("v217_6.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -53,7 +53,7 @@ body {
 .v217_7 {
   width: 100%;
   height: 950px;
-  background: url("../images/v217_7.png");
+  background: url("v217_7.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -117,7 +117,7 @@ body {
 }
 .v1_63 {
   width: 781px;
-  color: url("../images/v1_63.png");
+  color: url("v1_63.png");
   position: absolute;
   top: 275px;
   left: 371px;
@@ -154,7 +154,7 @@ body {
 .v1_192 {
   width: 100%;
   height: 899px;
-  background: url("../images/v1_192.png");
+  background: url("v1_192.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -166,7 +166,7 @@ body {
 }
 .v1_5 {
   width: 663px;
-  color: url("../images/v1_5.png");
+  color: url("v1_5.png");
   position: absolute;
   top: 231px;
   left: 117px;
@@ -332,7 +332,7 @@ body {
 .v1_10 {
   width: 849px;
   height: 812px;
-  background: url("../images/v1_10.png");
+  background: url("v1_10.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
